@@ -255,7 +255,7 @@ sub copy_xpage
 	{
 		my $part = $node->nodeName;
 		$part =~ s/^.*://;
-		next unless( $part eq "body" || $part eq "title" );
+		next unless( $part eq "body" || $part eq "title" || $part eq "template" );
 
 		$parts->{$part} = $session->make_doc_fragment;
 			
