@@ -1176,7 +1176,7 @@ sub unescape_filename
 	$fileid =~ s/==(....)/chr(hex($1))/eg;
 	$fileid =~ s/=(..)/chr(hex($1))/eg;
 
-	utf8::encode($fileid);
+	utf8::decode($fileid);
 
 	return $fileid;
 }
